--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "type": "library",
     "license": "MIT",
     "require-dev": {
-        "phpunit/phpunit": "^9.6"
+        "phpunit/phpunit": "^9.6",
+        "squizlabs/php_codesniffer": "^3.9"
     },
     "autoload": {
         "psr-4": {
-            "CNIC\\IDNA\\": "lib/"
+            "CNIC\\IDNA\\": "src/IDNA/"
         }
     },
     "autoload-dev": {
@@ -17,7 +18,9 @@
         }
     },
     "scripts": {
-        "test": "phpunit --verbose tests/IDNATranslatorTest.php"
+        "codefix": "phpcbf --ignore=\"*/vendor/*\" --standard=PSR12 -q src tests",
+        "codecheck": "phpcs --ignore=\"*/vendor/*\" --standard=PSR12 -q src tests",
+        "test": "XDEBUG_MODE=coverage phpunit --coverage-html=./reports/html"
     },
     "config": {
         "sort-packages": true
