--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 /tests/logs/*.txt
 /tests/logs/*.log
-basic-test.php
 vendor
 report
 docs
 node_modules
 composer.lock
+build/api-cache
 .phpunit.result.cache
+php-sdk.phar
+php-sdk.phar.gz
+phpDocumentor.phar
+phpdoc.phar
