--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "MIT",
     "require-dev": {
-        "phpunit/phpunit": "^9.6",
+        "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.9"
     },
     "autoload": {
@@ -18,9 +18,10 @@
         }
     },
     "scripts": {
+        "docs": "rm -rf build docs;test ! -e phpdoc.phar && wget https://github.com/phpDocumentor/phpDocumentor/releases/download/v3.3.1/phpDocumentor.phar -O phpdoc.phar && chmod +x phpdoc.phar;./phpdoc.phar",
         "codefix": "phpcbf --ignore=\"*/vendor/*\" --standard=PSR12 -q src tests",
         "codecheck": "phpcs --ignore=\"*/vendor/*\" --standard=PSR12 -q src tests",
-        "test": "XDEBUG_MODE=coverage phpunit --coverage-html=./reports/html"
+        "coverage": "XDEBUG_MODE=coverage phpunit --coverage-html=./reports/html"
     },
     "config": {
         "sort-packages": true
