build(composer & package): updated name for the package

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -22,6 +22,7 @@
                     "HISTORY.md",
                     "@(package?(-lock)|composer).json",
                     "report",
+                    "docs",
                     "src"
                 ]
             }
