--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,24 @@
     "description": "PHP library to convert Domain Names correctly from IDN to Punycode, and vice-versa also offers TR46 processing.",
     "type": "library",
     "license": "MIT",
+    "keywords": [
+        "php idn converter",
+        "php idna",
+        "php idna",
+        "domains",
+        "convert",
+        "to",
+        "punycode",
+        "covert",
+        "to",
+        "idna",
+        "php",
+        "library"
+    ],
+    "homepage": "https://github.com/centralnicgroup-opensource/rtldev-middleware-php-idna-translator",
+    "require": {
+        "php": ">=7.4.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.9"
