--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,6 @@
 .devcontainer export-ignore
 .github export-ignore
 reports export-ignore
-docs export-ignore
 tests export-ignore
 
 # files to exclude
@@ -17,3 +16,10 @@ phpunit.xml.dist export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 gulpfile.js export-ignore
+
+# fix language issue
+*.html linguist-detectable=false
+*.js linguist-detectable=false
+*.css linguist-detectable=false
+*.xml linguist-detectable=false
+*.php linguist-detectable=true
