--- a/.gitattributes
+++ b/.gitattributes
@@ -16,6 +16,7 @@ phpunit.xml.dist export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 gulpfile.js export-ignore
+index.php export-ignore
 
 # fix language issue
 *.html linguist-detectable=false
