--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules
 composer.lock
 build/api-cache
 .phpunit.result.cache
+.phpunit.cache
 php-sdk.phar
 php-sdk.phar.gz
 phpDocumentor.phar
