--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" colors="true" stopOnFailure="true" bootstrap="./vendor/autoload.php" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
-  <coverage processUncoveredFiles="true">
-    <include>
-      <directory suffix=".php">src</directory>
-    </include>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" colors="true" stopOnFailure="true" bootstrap="./vendor/autoload.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd" cacheDirectory=".phpunit.cache">
+  <coverage>
     <report>
-      <clover outputFile="./reports/clover/coverage.xml" />
-      <html outputDirectory="./reports/html" lowUpperBound="35" highLowerBound="70" />
-      <text outputFile="php://stdout" showUncoveredFiles="false" />
+      <clover outputFile="./reports/clover/coverage.xml"/>
+      <html outputDirectory="./reports/html" lowUpperBound="35" highLowerBound="70"/>
+      <text outputFile="php://stdout" showUncoveredFiles="false"/>
     </report>
   </coverage>
   <testsuites>
@@ -16,8 +13,13 @@
     </testsuite>
   </testsuites>
   <logging>
-    <junit outputFile="./reports/logging/logfile.xml" />
-    <testdoxHtml outputFile="./reports/logging/testdox.html" />
-    <testdoxText outputFile="./reports/logging/testdox.txt" />
+    <junit outputFile="./reports/logging/logfile.xml"/>
+    <testdoxHtml outputFile="./reports/logging/testdox.html"/>
+    <testdoxText outputFile="./reports/logging/testdox.txt"/>
   </logging>
+  <source>
+    <include>
+      <directory suffix=".php">src</directory>
+    </include>
+  </source>
 </phpunit>
