--- a/package.json
+++ b/package.json
@@ -37,15 +37,14 @@
     }
   ],
   "overrides": {
-    "glob-parent": "^6.0.2",
-    "chokidar": "^3.5.3"
+    "glob-parent": "^6.0.2"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "gulp": "^5.0.0",
-    "rtldev-middleware-gulp-release-notification-plugin": "github:centralnicgroup-opensource/rtldev-middleware-gulp-release-notification-plugin#semver:^2.0.7",
+    "rtldev-middleware-gulp-release-notification-plugin": "github:centralnicgroup-opensource/rtldev-middleware-gulp-release-notification-plugin#semver:^2.0.8",
     "semantic-release": "^23.0.7"
   }
 }
